--- a/src/layouts/NewspaperLayout.astro
+++ b/src/layouts/NewspaperLayout.astro
@@ -4,7 +4,6 @@ const today = new Date().toLocaleDateString("en-US", {
   month: "long",
   year: "numeric",
 });
-import "../styles/theme.css";
 ---
 <!doctype html>
 <html lang="en">
@@ -13,10 +12,10 @@ import "../styles/theme.css";
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HappeningNow.news</title>
 
-<link rel="stylesheet" href="/src/styles/newspaper.css" />
-<link rel="stylesheet" href="/src/styles/print.css" media="print" />
-<link rel="stylesheet" href="/src/styles/theme.css" />
-<link rel="stylesheet" href="/src/styles/themes.css" />
+<link rel="stylesheet" href="/css/newspaper.css" />
+<link rel="stylesheet" href="/css/print.css" media="print" />
+<link rel="stylesheet" href="/css/theme.css" />
+<link rel="stylesheet" href="/css/themes.css" />
 
     <script is:inline>
       (function () {
