--- a/src/layouts/NewspaperLayout.astro
+++ b/src/layouts/NewspaperLayout.astro
@@ -12,10 +12,10 @@ const today = new Date().toLocaleDateString("en-US", {
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HappeningNow.news</title>
 
-<link rel="stylesheet" href="/css/newspaper.css" />
-<link rel="stylesheet" href="/css/print.css" media="print" />
-<link rel="stylesheet" href="/css/theme.css" />
-<link rel="stylesheet" href="/css/themes.css" />
+<link rel="stylesheet" href="/src/styles/newspaper.css" />
+<link rel="stylesheet" href="/src/styles/print.css" media="print" />
+<link rel="stylesheet" href="/src/styles/theme.css" />
+<link rel="stylesheet" href="/src/styles/themes.css" />
 
     <script is:inline>
       (function () {
